Add POST auf /trips
